# WandbOfflineSync

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  generate_cert.sh  pyproject.toml  requirements.txt  sync_farm.py
sync_agent/: __init__.py  agent.py
wandb_offline_sync/agent/: __init__.py  wandb_sync_agent.py
wandb_offline_sync/farm/: wandb_sync_farm.py
wandb_offline_sync/farm/templates/: index.html
